# BreakOut

./: .gitignore  Application.hpp  Ball.hpp  Block.hpp  CMakeLists.txt  GameScreen.hpp  Paddle.hpp  config.hpp  main.cpp
Tests/: test_Collision.cpp  test_SceneObjects.cpp
src/: Application.hpp  Asteroids.cpp  Asteroids.h  Ball.hpp  Block.hpp  Button.hpp  Collision.hpp  GameScreen.hpp  MenuScreen.hpp  Paddle.hpp  SceneObject.hpp  Screen.hpp  config.hpp  main.cpp
